forestx-rs/tui/src/chatwidget/snapshots/forestx_tui__chatwidget__tests__safety_buffering_side_conversation_without_retry.snap
---
source: tui/src/chatwidget/tests/app_server.rs
expression: popup
---
  Our systems are thinking a bit more about this request before responding.

› 1. Dismiss and keep waiting
  2. Learn more

  No action is required. Forestx will keep waiting, and this menu will close when
  the response is ready.
